--- a/_posts/2016-8-20-etiam.md
+++ b/_posts/2016-8-20-etiam.md
@@ -1,22 +1,66 @@
 ---
 layout: post
-title: Etiam
-description: Feugiat amet tempus
-image: assets/images/pic06.jpg
+title: Standardized Testing of Small Unmanned Aircraft Systems (sUAS)
+description: Evaluating UAS Performance for Public Safety & Emergency Response
+image: assets/images/suas-testing.jpg
 ---
 
-Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. 
-Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. 
-Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. 
-Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.
+# **Standardized sUAS Testing for Public Safety**
+🚀 **A Collaborative Initiative by NIST, DOJ, and DHS**  
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. 
-Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. 
-Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. 
-Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. 
-Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. 
-Pellentesque aliquam maximus risus, vel sed vehicula.
+In **August 2020**, I contributed to the **modeling, site setup planning, fabrication, and execution of standardized test evaluations** for **small unmanned aircraft systems (sUAS)** as part of the **National Unmanned Aircraft Systems Program**. This initiative, led by the **Department of Justice (DOJ)** and **Department of Homeland Security (DHS)** in collaboration with **NIST**, aimed to develop standardized performance assessments for UAVs used in **public safety, emergency response, and law enforcement applications**.
 
-Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. 
-Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. 
-Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.
+As part of the **NIST Emergency Response Robots Project**, I helped design **test lane layouts, fabricate test structures, and execute trials** that measured UAV capabilities in **flight, perception, and data collection in real-world conditions**.
+
+---
+
+## **📡 What Was Evaluated?**
+### **Three Key Mission Categories for sUAS**
+1️⃣ **Medium-Range Reconnaissance** – Exterior structure surveillance & mapping  
+2️⃣ **Indoor Reconnaissance** – GPS-denied environments & confined spaces  
+3️⃣ **Scene Investigation & Mapping** – High-resolution imaging for site documentation  
+
+Each system underwent a **comprehensive evaluation** using **standardized UAV performance metrics**, assessing **flight endurance, maneuverability, data transmission, and sensor effectiveness**.
+
+---
+
+## **🔬 Standardized Testing Methods**
+🛠 **20+ Evaluations Based on NIST sUAS Test Methods**  
+
+I helped set up and execute standardized test procedures, ensuring UAVs met **ASTM International (E54.09) and NFPA 2400 standards** for public safety operations.  
+
+✔ **Battery endurance testing** – Evaluating UAV operational duration under real-world conditions  
+✔ **Aerial mapping & imaging accuracy** – Assessing high-resolution imaging for scene documentation  
+✔ **Obstacle avoidance & navigation** – Testing flight stability in complex environments  
+✔ **Data encryption & communication range** – Measuring secure and reliable UAV telemetry  
+✔ **Stability in wind conditions** – Evaluating UAV performance in variable weather  
+
+My role included **optimizing the test lanes, calibrating test apparatus, and ensuring reproducible measurements** for **quantitative performance evaluations**.
+
+---
+
+## **📍 Event Details**
+📍 **Location:** Montgomery County Police Training Facility, MD  
+🗓 **Date:** August 3-7, 2020  
+
+This **federally-supported test site** became a **regional training & evaluation center for UAVs** used in **public safety and emergency response scenarios**.  
+
+I helped **design the site layout, fabricate evaluation stations, and coordinate test execution** to **simulate real-world UAV deployment conditions**.
+
+---
+
+## **🦺 Ensuring Safety & Reliability**
+To maintain **safe and effective UAV operations**, testing included:  
+✅ **Operator proficiency assessments** – Measuring remote pilot skill using NIST-standardized trials  
+✅ **Flight performance in realistic conditions** – Assessing UAV handling in confined, open, and obstructed areas  
+✅ **System reliability evaluations** – Testing UAV functionality under stress conditions such as **low-light navigation, sensor accuracy, and obstacle detection**  
+
+---
+
+## **📢 Outcomes & Next Steps**
+The results from this testing helped shape **national UAV performance standards**, guiding procurement decisions for **DOJ and DHS agencies**. The facility continues to serve as a **training ground for UAV credentialing and pilot evaluation**.
+
+As a researcher and engineer at NIST, I contributed to the **design and execution of these UAV test trials**, ensuring **repeatable, objective metrics** were established for **federal UAV deployments**.
+
+📄 **[Learn More About NIST UAV Testing](robottestmethods.nist.gov)**  
+📂 **[Explore More Projects](./projects/)**  
