--- a/_posts/2016-8-20-etiam.md
+++ b/_posts/2016-8-20-etiam.md
@@ -1,66 +1,43 @@
 ---
 layout: post
 title: Standardized Testing of Small Unmanned Aircraft Systems (sUAS)
-description: Evaluating UAS Performance for Public Safety & Emergency Response
+description: Evaluating UAS Performance for Public Safety and Emergency Response
 image: assets/images/suas-testing.jpg
 ---
 
-# **Standardized sUAS Testing for Public Safety**
-🚀 **A Collaborative Initiative by NIST, DOJ, and DHS**  
+Standardized sUAS Testing for Public Safety
 
-In **August 2020**, I contributed to the **modeling, site setup planning, fabrication, and execution of standardized test evaluations** for **small unmanned aircraft systems (sUAS)** as part of the **National Unmanned Aircraft Systems Program**. This initiative, led by the **Department of Justice (DOJ)** and **Department of Homeland Security (DHS)** in collaboration with **NIST**, aimed to develop standardized performance assessments for UAVs used in **public safety, emergency response, and law enforcement applications**.
+A Collaborative Initiative by NIST, DOJ, and DHS
 
-As part of the **NIST Emergency Response Robots Project**, I helped design **test lane layouts, fabricate test structures, and execute trials** that measured UAV capabilities in **flight, perception, and data collection in real-world conditions**.
+In August 2020, I helped plan, fabricate, and execute standardized sUAS test evaluations for the National Unmanned Aircraft Systems Program. This initiative, led by NIST, DOJ, and DHS, developed standardized UAV performance assessments for public safety, emergency response, and law enforcement applications.
 
----
+Key Mission Categories
 
-## **📡 What Was Evaluated?**
-### **Three Key Mission Categories for sUAS**
-1️⃣ **Medium-Range Reconnaissance** – Exterior structure surveillance & mapping  
-2️⃣ **Indoor Reconnaissance** – GPS-denied environments & confined spaces  
-3️⃣ **Scene Investigation & Mapping** – High-resolution imaging for site documentation  
+- Reconnaissance and mapping for structural surveillance and GPS-denied navigation
+- Emergency scene investigation using high-resolution imaging and thermal detection
+- Operator proficiency and UAV performance assessments through standardized flight and data collection tests
 
-Each system underwent a **comprehensive evaluation** using **standardized UAV performance metrics**, assessing **flight endurance, maneuverability, data transmission, and sensor effectiveness**.
+Standardized Testing Methods
 
----
+More than 20 evaluations were conducted based on NIST sUAS test methods, including:
 
-## **🔬 Standardized Testing Methods**
-🛠 **20+ Evaluations Based on NIST sUAS Test Methods**  
+- Battery endurance and maneuverability
+- Obstacle avoidance and flight stability
+- Aerial mapping and imaging accuracy
+- Data security and communication range
 
-I helped set up and execute standardized test procedures, ensuring UAVs met **ASTM International (E54.09) and NFPA 2400 standards** for public safety operations.  
+I contributed to site layout design, test lane setup, and UAV trial execution, ensuring quantifiable, repeatable assessments.
 
-✔ **Battery endurance testing** – Evaluating UAV operational duration under real-world conditions  
-✔ **Aerial mapping & imaging accuracy** – Assessing high-resolution imaging for scene documentation  
-✔ **Obstacle avoidance & navigation** – Testing flight stability in complex environments  
-✔ **Data encryption & communication range** – Measuring secure and reliable UAV telemetry  
-✔ **Stability in wind conditions** – Evaluating UAV performance in variable weather  
+Event Details
 
-My role included **optimizing the test lanes, calibrating test apparatus, and ensuring reproducible measurements** for **quantitative performance evaluations**.
+Location: Montgomery County Police Training Facility, MD  
+Dates: August 3-7, 2020  
 
----
+This federally supported test site continues to serve as a UAV training and credentialing facility.
 
-## **📍 Event Details**
-📍 **Location:** Montgomery County Police Training Facility, MD  
-🗓 **Date:** August 3-7, 2020  
+Impact and Next Steps
 
-This **federally-supported test site** became a **regional training & evaluation center for UAVs** used in **public safety and emergency response scenarios**.  
+The results helped shape national UAV performance standards, guiding procurement for DOJ and DHS agencies.
 
-I helped **design the site layout, fabricate evaluation stations, and coordinate test execution** to **simulate real-world UAV deployment conditions**.
-
----
-
-## **🦺 Ensuring Safety & Reliability**
-To maintain **safe and effective UAV operations**, testing included:  
-✅ **Operator proficiency assessments** – Measuring remote pilot skill using NIST-standardized trials  
-✅ **Flight performance in realistic conditions** – Assessing UAV handling in confined, open, and obstructed areas  
-✅ **System reliability evaluations** – Testing UAV functionality under stress conditions such as **low-light navigation, sensor accuracy, and obstacle detection**  
-
----
-
-## **📢 Outcomes & Next Steps**
-The results from this testing helped shape **national UAV performance standards**, guiding procurement decisions for **DOJ and DHS agencies**. The facility continues to serve as a **training ground for UAV credentialing and pilot evaluation**.
-
-As a researcher and engineer at NIST, I contributed to the **design and execution of these UAV test trials**, ensuring **repeatable, objective metrics** were established for **federal UAV deployments**.
-
-📄 **[Learn More About NIST UAV Testing](robottestmethods.nist.gov)**  
-📂 **[Explore More Projects](./projects/)**  
+Learn More About NIST UAV Testing: [robottestmethods.nist.gov](https://robottestmethods.nist.gov)  
+Explore More Projects: [./projects/](./projects/)  
