Updated Post display

--- a/_posts/2020-8-01-mcpd.md
+++ b/_posts/2020-8-01-mcpd.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: Standardized Testing of Small Unmanned Aircraft Systems (sUAS)
-description: Evaluating UAS Performance for Public Safety and Emergency Response
-image: assets/images/suas-testing.jpg
+title: Standardized sUAS Testing for Public Safety
+description: A Collaborative Initiative by NIST, DOJ, and DHS
+image: assets/images/post_img_1.jpg
 ---
 
-Standardized sUAS Testing for Public Safety
 
-A Collaborative Initiative by NIST, DOJ, and DHS
+
+
 
 In August 2020, I helped plan, fabricate, and execute standardized sUAS test evaluations for the National Unmanned Aircraft Systems Program. This initiative, led by NIST, DOJ, and DHS, developed standardized UAV performance assessments for public safety, emergency response, and law enforcement applications.
 
@@ -30,8 +30,8 @@ I contributed to site layout design, test lane setup, and UAV trial execution, e
 
 Event Details
 
-Location: Montgomery County Police Training Facility, MD  
-Dates: August 3-7, 2020  
+Location: County Police Training Facility in Maryland  
+Dates: August, 2020  
 
 This federally supported test site continues to serve as a UAV training and credentialing facility.
 
